first time webpack build successful

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="/jeydi.69168e95.css" type="text/css">
+      <link rel="stylesheet" href="./assets/index.css" type="text/css">
       <title>Index</title>
 </head>
 
@@ -17,6 +17,6 @@
       </div>
 
 </body>
-<script src="/jeydi.7bb06934.js" text=""></script>
+<script src="./assets/index.js" text=""></script>
 
 </html>
