--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,41 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="./assets/index.css" type="text/css">
+      <base href="./">
+      <link rel="stylesheet" href="./assets/main.css" type="text/css" />
       <title>Index</title>
 </head>
 
 <body>
-      <div class="bg-gray-100">
-            <p class="text-lg font-semibold"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
-                  perferendis rerum molestias nisi quaerat sequi omnis soluta
-                  quisquam nulla reprehenderit enim repudiandae ab, eius nihil excepturi</p>
-            rat provident necessitatibus sed?
+      <div class="container bg-gray-900 inline-flex space-x-32 items-center justify-end z-10 top-0 left-0">
+            <p class="text-6xl text-white">Jeydi</p>
+            <li class="flex space-x-7 items-center justify-start">
+                  <a class="text-base text-center text-white">Home</a>
+                  ?V?I <div class="w-2 h-2 bg-pink-900 bg-opacity-50 border rounded-full border-white"></div>
+                  <a class="text-base text-center text-white">About</a>
+                  <a class="text-base text-center text-white">Services</a>
+                  <a class="text-base text-center text-white">Portfolio</a>
+                  <a class="text-base text-center text-white">News</a>
+                  <a class="text-base text-center text-white">Contact</a>
+            </li>
+            <p class="text-xl font-solid text-center text-yellow-400"></p>
+            <p class="text-xl text-right text-white">+621 2345 6789</p>
       </div>
+      <div class="container  bg-own       h-screen w-screen border-b-2 border-fuchsia-600 z-0 justify-end top-0 left-0 flex">
+            <div class="container bg-yellow-300 relative w-1/3 h-screen"> euuu</div>
+      </div>
+      <div class="container bg-blue-900 h-screen w-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-900 h-screen w-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-900 h-screen w-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-800 w-screen h-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-700 w-screen h-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-600 w-screen h-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-500 w-screen h-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-400 w-screen h-screen border-b-2 border-fuchsia-600"></div>
 
+
+      <script src="./assets/index.js" type="text/javascript"></script>
 </body>
-<script src="./assets/index.js" text=""></script>
+
 
 </html>
