--- a/public/index.html
+++ b/public/index.html
@@ -6,37 +6,60 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <base href="./">
       <link rel="stylesheet" href="./assets/main.css" type="text/css" />
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@600&display=swap" rel="stylesheet">
       <title>Index</title>
 </head>
 
-<body>
-      <div class="container bg-gray-900 inline-flex space-x-32 items-center justify-end z-10 top-0 left-0">
+<body class=" h-screen w-screen">
+      <nav data-scroll class="container bg-gray-800 bg-opacity-0 h-10 w-full inline-flex space-x-32 items-center sticky justify-center z-10 left-0 right-0 transition duration-1000 ease">
             <p class="text-6xl text-white">Jeydi</p>
             <li class="flex space-x-7 items-center justify-start">
                   <a class="text-base text-center text-white">Home</a>
-                  ?V?I <div class="w-2 h-2 bg-pink-900 bg-opacity-50 border rounded-full border-white"></div>
+                  <div class="w-2 h-2 bg-pink-900 bg-opacity-50 border rounded-full border-white"></div>
                   <a class="text-base text-center text-white">About</a>
                   <a class="text-base text-center text-white">Services</a>
                   <a class="text-base text-center text-white">Portfolio</a>
                   <a class="text-base text-center text-white">News</a>
                   <a class="text-base text-center text-white">Contact</a>
             </li>
-            <p class="text-xl font-solid text-center text-yellow-400"></p>
-            <p class="text-xl text-right text-white">+621 2345 6789</p>
+            <p class="text-xl text-right text-gray-900">+621 2345 6789</p>
+      </nav>
+      <div class="container w-full h-screen border-b-2 border-fuchsia-600 z-0 relative top-0 left-0">
+            <div class="flex">
+                  <div class="relative bg-own          w-2/3 h-screen flex-auto">
+                        <p data-scroll class="font-roboto text-5xl text-green-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero tempora officia et adipisci reprehenderit vero debitis rerum necessitatibus quae. Hic asperiores iure provident quisquam quaerat reiciendis, voluptatum natus vitae perferendis.</p>
+                  </div>
+                  <div class="relative bg-yellow-300 w-1/3 h-screen flex-auto"></div>
+            </div>
       </div>
-      <div class="container  bg-own       h-screen w-screen border-b-2 border-fuchsia-600 z-0 justify-end top-0 left-0 flex">
-            <div class="container bg-yellow-300 relative w-1/3 h-screen"> euuu</div>
+      <div class="container bg-blue-900 w-full h-full border-b-2 border-fuchsia-600">
+            <p data-scroll class="default relative font-newsreader text-white text-3xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium quo tempore exercitationem impedit nesciunt rem eveniet quisquam incidunt qui cumque magnam, velit ipsum, optio quis? Magni voluptatem minima voluptatum voluptas.</p>
       </div>
-      <div class="container bg-blue-900 h-screen w-screen border-b-2 border-fuchsia-600"></div>
-      <div class="container bg-gray-900 h-screen w-screen border-b-2 border-fuchsia-600"></div>
-      <div class="container bg-gray-900 h-screen w-screen border-b-2 border-fuchsia-600"></div>
-      <div class="container bg-gray-800 w-screen h-screen border-b-2 border-fuchsia-600"></div>
-      <div class="container bg-gray-700 w-screen h-screen border-b-2 border-fuchsia-600"></div>
-      <div class="container bg-gray-600 w-screen h-screen border-b-2 border-fuchsia-600"></div>
-      <div class="container bg-gray-500 w-screen h-screen border-b-2 border-fuchsia-600"></div>
-      <div class="container bg-gray-400 w-screen h-screen border-b-2 border-fuchsia-600"></div>
-
-
+      <div class="container bg-gray-900 w-full h-screen border-b-2 border-fuchsia-600">
+            <p data-scroll class="default relative font-roboto text-white text-4xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis cum nostrum repellat, ex inventore quia hic voluptatum fugit? Expedita, hic. Aperiam officiis eius maiores quas repellendus deserunt repudiandae dignissimos! Ipsa.</p>
+      </div>
+      <div class="container bg-gray-900 w-full h-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-800 w-full h-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-700 w-full h-screen border-b-2 border-fuchsia-600">
+            <div class="items-center rounded-lg">
+                  <div data-scroll class="relative img-test h-3/4 w-3/4 rounded-md object-cover" src="./assets/images/aurora.jpg"></div>
+            </div>
+      </div>
+      <div class="container bg-gray-600 w-full h-screen border-b-2 border-fuchsia-600">
+            <div data-scroll-container>
+                  <div data-scroll-section>
+                        <h1 data-scroll class="text-white">Hey</h1>
+                        <p data-scroll class="text-white">👋</p>
+                  </div>
+                  <div data-scroll-section>
+                        <h2 data-scroll data-scroll-speed="1" class="text-white">What's up?</h2>
+                        <p data-scroll data-scroll-speed="2" class="text-white">😬</p>
+                  </div>
+            </div>
+      </div>
+      <div class="container bg-gray-500 w-full h-screen border-b-2 border-fuchsia-600"></div>
+      <div class="container bg-gray-400 w-full h-screen border-b-2 border-fuchsia-600"></div>
       <script src="./assets/index.js" type="text/javascript"></script>
 </body>
 
