change dir structures

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
       <title>Index</title>
 </head>
 
-<body class=" h-screen w-screen">
-      <nav data-scroll class="container bg-gray-800 bg-opacity-0 h-10 w-full inline-flex space-x-32 items-center sticky justify-center z-10 left-0 right-0 transition duration-1000 ease">
+<body class=" h-full w-full">
+      <nav data-scroll class="container bg-gray-800 bg-opacity-0 h-10 w-full inline-flex space-x-32 items-center sticky justify-center z-10 left-0 right-0">
             <p class="text-6xl text-white">Jeydi</p>
             <li class="flex space-x-7 items-center justify-start">
                   <a class="text-base text-center text-white">Home</a>
@@ -25,16 +25,22 @@
             </li>
             <p class="text-xl text-right text-gray-900">+621 2345 6789</p>
       </nav>
-      <div class="container w-full h-screen border-b-2 border-fuchsia-600 z-0 relative top-0 left-0">
-            <div class="flex">
-                  <div class="relative bg-own          w-2/3 h-screen flex-auto">
+      <div class="container bg-white w-full h-full  border-b-2 border-fuchsia-600 z-0 absolute top-0 left-0">
+            <div class="flex  bg-own">
+                  <div class="relative w-2/3 h-screen flex-auto my-auto">
                         <p data-scroll class="font-roboto text-5xl text-green-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero tempora officia et adipisci reprehenderit vero debitis rerum necessitatibus quae. Hic asperiores iure provident quisquam quaerat reiciendis, voluptatum natus vitae perferendis.</p>
                   </div>
                   <div class="relative bg-yellow-300 w-1/3 h-screen flex-auto"></div>
             </div>
       </div>
-      <div class="container bg-blue-900 w-full h-full border-b-2 border-fuchsia-600">
-            <p data-scroll class="default relative font-newsreader text-white text-3xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium quo tempore exercitationem impedit nesciunt rem eveniet quisquam incidunt qui cumque magnam, velit ipsum, optio quis? Magni voluptatem minima voluptatum voluptas.</p>
+      <div class="container bg-blue-900 w-full h-screen border-b-2 border-fuchsia-600">
+            <div class="flex h-screen">
+                  <div class="aspect-w-3 aspect-h-2"><img class="object-cover" src="./assets/images/melki.jpg"></div>
+                  <div class="aspect-w-3 aspect-h-2"><img class="object-cover" src="./assets/images/epa.JPG"></div>
+                  <div class="aspect-w-3 aspect-h-2"><img class="object-cover" src="./assets/images/melissa.jpg"></div>
+                  <div class="aspect-w-3 aspect-h-1"><img class="object-cover" src="./assets/images/sami.jpg"></div>
+                  <div class="aspect-w-3 aspect-h-1"><img class="object-cover" src="./assets/images/melki.jpg"></div>
+            </div>
       </div>
       <div class="container bg-gray-900 w-full h-screen border-b-2 border-fuchsia-600">
             <p data-scroll class="default relative font-roboto text-white text-4xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis cum nostrum repellat, ex inventore quia hic voluptatum fugit? Expedita, hic. Aperiam officiis eius maiores quas repellendus deserunt repudiandae dignissimos! Ipsa.</p>
