--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       <div class="container bg-white w-full h-full  border-b-2 border-fuchsia-600 z-0 absolute top-0 left-0">
             <div class="flex  bg-own">
                   <div class="relative w-2/3 h-screen flex-auto my-auto">
-                        <p data-scroll class="font-roboto text-5xl text-green-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero tempora officia et adipisci reprehenderit vero debitis rerum necessitatibus quae. Hic asperiores iure provident quisquam quaerat reiciendis, voluptatum natus vitae perferendis.</p>
+                        <p data-scroll class="font-tinos text-5xl text-green-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero tempora officia et adipisci reprehenderit vero debitis rerum necessitatibus quae. Hic asperiores iure provident quisquam quaerat reiciendis, voluptatum natus vitae perferendis.</p>
                   </div>
                   <div class="relative bg-yellow-300 w-1/3 h-screen flex-auto"></div>
             </div>
