--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Jeydi 243</title>
 </head>
 
-<body class="h-full w-full">
+<body class="h-full w-full loading">
     <nav class="container-flui bg-gray-800 bg-opacity-0 h-10 w-full inline-flex space-x-32 items-center absolute justify-center z-10 top-0 right-0">
         <p class="text-6xl md:text-white">Jeydi</p>
         <li class="flex space-x-7 items-center justify-start">
@@ -24,32 +24,48 @@
         </li>
         <!-- <p class="text-xl text-right text-gray-900">+621 2345 6789</p> -->
     </nav>
-    <div class="container 2xl:container  w-screen h-screen border-b-2 z-0 relative top-0 left-0" id="home">
-        <div class="result font-roboto text-white"></div>
-        <div class="flex flex-col justify-center align-center">
-            <div class="flex-1 justify-items-stretch">
-                <img class="object-fill h-48 w-48 inline-block relative top-12" src="./assets/images/168f5486-cdcf-42f0-97d6-2db7e0f26657.png" alt="" srcset="" />
-            </div>
-            <div class="flex-1 text-justify mt-5 pt-5">
-                <p class="font-tinos font-bold text-white text-center text-6xl">
-                    Hi, I'm
-                    <br\>
-                        <span id="epa" class="font-fira text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-indigo-500 to-green-500">Epa</span>, a Lubumbashi based
-                        <span class="font-fira text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-yellow-500 to-green-500">
-                            Mobile</span>,
-                        <span class="font-fira text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-fuchsia-500">Desktop</span> and
-                        <span class="font-fira text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-green-500">
-                            Web</span> Developer
+    <div class="w-screen h-screen border-b-2 z-0 relative top-0 left-0" id="home">
+        <div class="flex flex-col my-auto">
+            <img class="object-fill h-48 w-48 inline-block relative top-12 ml-20" src="./assets/images/168f5486-cdcf-42f0-97d6-2db7e0f26657.png" alt="" srcset="" />
+            <div class="flex-1 text-left mt-5 pt-5 ml-20 inline">
+                <p class="text-white text-left font-playfair text-4xl leading-loose menu">
+                    <span class="text-6xl font-bold font-playfair"> Hi, I'm</span>
+
+                    <a class="menu__item" data-img="img/1.png">
+                        <span class="menu__item-inner-wrap">
+                            <span id="epa" class="menu__item-inner font-playfair text-6xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-indigo-500 to-green-500">Epa</span>
+                        </span>
+                    </a>,</br>
+                    <span class="font-playfair text-4xl">a Lubumbashi based</span>
+                    <a class="menu__item" data-img="img/2.png">
+                        <span class="menu__item-inner-wrap">
+                            <span class="menu__item-inner font-playfair text-4xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-yellow-500 to-green-500">
+                                Mobile
+                            </span>
+                        </span>
+                    </a>,
+                    <a class="menu__item">
+                        <span class="menu__item-inner-wrap">
+                            <span data-img="img/3.png" class="menu__item-inner font-playfair text-4xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-fuchsia-500">
+                                Desktop
+                            </span>
+                        </span>
+                    </a> and
+                    <a class="menu__item" data-img="img/4.png">
+                        <span class="menu__item-inner-wrap">
+                            <span class="font-playfair text-4xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-green-500">
+                                Web
+                            </span>
+                        </span>
+                    </a> Developer
                 </p>
             </div>
             <div class="flex-1"></div>
         </div>
     </div>
-    <div class="container 2xl:container bg-gray-800 w-screen h-screen max-w-xl mx-auto" id="services">
+    <div class="bg-gray-800 w-screen h-screen mx-auto" id="services">
         <div class="flex flex-row">
-            <div class="flex-1">
-                <img src="./assets/images/168f5486-cdcf-42f0-97d6-2db7e0f26657.png" />
-            </div>
+            <img src="./assets/images/168f5486-cdcf-42f0-97d6-2db7e0f26657.png" />
             <div class="flex-auto">
                 <span class="font-tinos font-bold">Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Dolorem sapiente, perspiciatis exercitationem
@@ -63,46 +79,20 @@
             </div>
         </div>
     </div>
-    <div class="container 2xl:container bg-gray-900 w-screen h-screen max-w-xl mx-auto" id="portfolio">
+    <div class="bg-gray-900 w-screen h-screen mx-auto" id="portfolio">
 
     </div>
-    <div class="container 2xl:container bg-gray-800 w-screen h-screen details max-w-xl mx-auto" id="services">
-        <div class="items-center rounded-lg">
-            <div data-scroll class="relative img-test h-3/4 w-3/4 rounded-md object-cover" src="./assets/images/aurora.jpg"></div>
-        </div>
+    <div class="bg-gray-800 w-screen h-screen details mx-auto" id="services">
+        <div data-scroll class="relative img-test h-3/4 w-3/4 rounded-md object-cover" src="./assets/images/aurora.jpg"></div>
     </div>
-    <div class="container 2xl:container bg-gray-900 w-screen h-screen max-w-xl mx-auto" id="testimonials">
-        <div class="flex flex-col items-center w-full p-6 space-y-8 rounded-md lg:h-full lg:p-8 dark:bg-coolGray-900 dark:text-coolGray-100">
-            <img src="https://source.unsplash.com/random/100x100" alt="" class="w-20 h-20 rounded-full object-">
-            <blockquote class="max-w-lg dark:text-lg italic font-medium dark:text-center">"Et, dignissimos obcaecati. Recusandae praesentium doloribus vitae? Rem unde atque mollitia!"</blockquote>
-            <div class="dark:text-center dark:text-coolGray-400">
-                <p>Leroy Jenkins</p>
-                <p>CEO of Company Co.</p>
-            </div>
-            <div class="flex space-x-2">
-                <button aria-label="Page 1" class="w-2 h-2 rounded-full dark:bg-coolGray-50" control-id="ControlID-50"></button>
-                <button aria-label="Page 2" class="w-2 h-2 rounded-full dark:bg-coolGray-600" control-id="ControlID-51"></button>
-                <button aria-label="Page 3" class="w-2 h-2 rounded-full dark:bg-coolGray-600" control-id="ControlID-52"></button>
-                <button aria-label="Page 4" class="w-2 h-2 rounded-full dark:bg-coolGray-600" control-id="ControlID-53"></button>
-            </div>
-        </div>
+    <div class="bg-gray-900 w-screen h-screen mx-auto" id="testimonials">
     </div>
-    <div class="container 2xl:container bg-gray-800 w-screen h-screen max-w-xl mx-auto" id="contact">
-        <div data-scroll-container>
-            <div data-scroll-section>
-                <h1 data-scroll class="text-white">Hey</h1>
-                <p data-scroll class="text-white">👋</p>
-            </div>
-            <div data-scroll-section>
-                <h2 data-scroll data-scroll-speed="1" class="text-white">
-                    What's up?
-                </h2>
-                <p data-scroll data-scroll-speed="2" class="text-white">
-                    😬
-                </p>
-            </div>
-        </div>
+    <div class="bg-gray-800 w-screen h-screen mx-auto" id="contact">
+
     </div>
+    <svg class="cursor" width="30" height="30" viewBox="0 0 30 30">
+        <circle class="cursor__inner" cx="15" cy="15" r="7.5" />
+    </svg>
     <canvas id="canvas" height="150" width="300"></canvas>
     <script src="./assets/index.js" type="text/javascript"></script>
     <script></script>
