--- a/public/index2.html
+++ b/public/index2.html
@@ -12,14 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@600&display=swap" rel="stylesheet" />
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.1/dist/locomotive-scroll.css'>
     <title>Jeydi 243</title>
-    <script>
-        document.documentElement.className = "js";
-        var supportsCssVars = function() {
-            var e, t = document.createElement("style");
-            return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e
-        };
-        supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");
-    </script>
 </head>
 
 <body data-scroll-container>
@@ -53,7 +45,7 @@
         <p class="text-xl font-solid text-center text-yellow-400"></p>
         <p class="text-xl text-right text-white">+621 2345 6789</p>
     </section>
-    <section class="relative h-full w-full" style="left: 0px; top: 1020px;">
+    <section class="relative h-full w-full">
         <div class="relative bg-black" style="width: 1920px; height: 808px;">
             <p class="absolute text-4xl font-medium text-white" style="width: 772px; left: 373px; top: 225px;">Everything you can imagine is real</p>
             <p class="absolute text-4xl font-medium text-yellow-400" style="left: 1181px; top: 143px;">Culture</p>
@@ -86,7 +78,7 @@
             </div>
         </div>
     </section>
-    <section class="relative h-full w-full" style="left: 0px; top: 1611px;">
+    <section class="relative h-full w-full">
         <div class="absolute left-0 bottom-0 bg-gray-900" style="width: 1920px; height: 602px;" />
         <div class="w-96 absolute" style="left: 375px; top: 0px;">
             <div class="inline-flex flex-col space-y-7 items-start justify-end flex-1 pl-10 pr-8 pt-20 pb-12 bg-gray-900">
@@ -127,7 +119,7 @@
             </div>
         </div>
     </section>
-    <section class="relative h-full w-full" style="left: 0px; top: 2435px;">
+    <section class="relative h-full w-full">
         <div class="relative bg-black" style="width: 1920px; height: 2081px;">
             <div class="absolute" style="width: 396px; height: 164px; left: 762px; top: 260px;">
                 <p class="opacity-5 text-9xl font-medium text-center text-white">WORK</p>
@@ -158,7 +150,7 @@
             </div>
         </div>
     </section>
-    <section class="relative h-full w-full" style="left: 375px; top: 2252px;">
+    <section class="relative h-full w-full">
         <div class="inline-flex flex-col items-center justify-end px-48 py-20 bg-yellow-400" style="width: 1170px; height: 347px;">
             <p class="text-5xl font-medium text-center text-gray-900" style="width: 772px;">I'm Available for Freelance
             </p>
@@ -175,7 +167,7 @@
             </div>
         </div>
     </section>
-    <section class="relative h-full w-full" style="left: 1px; top: 4443.52px;">
+    <section class="relative h-full w-full">
         <div class="relative absolute left-0 bottom-0 bg-gray-900" style="width: 1920px; height: 757px;">
             <p class="absolute text-2xl font-medium text-yellow-400" style="left: 374px; top: 533px;">John Doe</p>
             <p class="absolute text-base leading-normal text-white" style="left: 374px; top: 570px;">Company ABC</p>
@@ -188,7 +180,7 @@
         </div>
         <div class="absolute bg-gray-800 rounded-lg" style="width: 567.16px; height: 830.37px; left: 980.50px; top: 0px;" />
     </section>
-    <section class="relative h-full w-full" style="left: 0px; top: 5268px;">
+    <section class="relative h-full w-full">
         <div class="relative bg-black" style="width: 1920px; height: 932px;">
             <div class="inline-flex space-x-2 items-center justify-end w-64 h-14 absolute" style="left: 375px; top: 167px;">
                 <p class="text-5xl font-medium text-white">Contact</p>
@@ -243,7 +235,7 @@
             <p class="absolute text-base italic font-italic leading-normal text-white" style="width: 670px; left: 875px; top: 771px;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
         </div>
     </section>
-    <section class="relative h-full w-full" style="left: 0px; top: 6200px;">
+    <section class="relative h-full w-full">
         <div class="flex space-x-4 items-center justify-end px-96 py-16 bg-gray-900" style="width: 1920px; height: 277px;">
             <img class="w-1/4 h-full" src="https://via.placeholder.com/281x141" />
             <img class="w-1/4 h-full" src="https://via.placeholder.com/281x141" />
@@ -251,41 +243,41 @@
             <img class="w-1/4 h-full" src="https://via.placeholder.com/281x141" />
         </div>
     </section>
-    <section class="relative bg-gray-800 h-full w-full" style="left: 0px; top: 6477px;">
-        </div>
-        <section class="absolute left-0 bottom-0" style="width: 1920px; height: 614px;">
-            <div class="relative bg-gray-900" style="width: 1920px; height: 614px;">
-                <div class="relative" style="width: 1920px; height: 614px;">
-                    <div class="bg-gray-900" style="width: 1920px; height: 614px;" />
-                    <img class="absolute" style="width: 1292px; height: 1330px; left: 253px; top: 6824px;" src="https://via.placeholder.com/1292x1330" />
+    <section class="relative bg-gray-800 h-full w-full">
+    </section>
+    <section class="absolute left-0 bottom-0">
+        <div class="relative bg-gray-900" style="width: 1920px; height: 614px;">
+            <div class="relative" style="width: 1920px; height: 614px;">
+                <div class="bg-gray-900" style="width: 1920px; height: 614px;" />
+                <img class="absolute" style="width: 1292px; height: 1330px; left: 253px; top: 6824px;" src="https://via.placeholder.com/1292x1330" />
+            </div>
+            <p class="absolute text-base leading-normal text-center text-white" style="width: 570px; height: 101px; left: 675px; top: 161px;">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <p class="absolute text-base leading-normal text-center text-white" style="width: 570px; left: 675px; top: 428px;">© 2020 Rojo Template Kit – All rights reserved.</p>
+            <div class="inline-flex space-x-3 items-center justify-end w-52 h-10 absolute" style="left: 859px; top: 295px;">
+                <div class="relative" style="width: 41px; height: 41px;">
+                    <div class="w-10 h-10 bg-yellow-400 rounded-full" />
+                    <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
                 </div>
-                <p class="absolute text-base leading-normal text-center text-white" style="width: 570px; height: 101px; left: 675px; top: 161px;">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-                <p class="absolute text-base leading-normal text-center text-white" style="width: 570px; left: 675px; top: 428px;">© 2020 Rojo Template Kit – All rights reserved.</p>
-                <div class="inline-flex space-x-3 items-center justify-end w-52 h-10 absolute" style="left: 859px; top: 295px;">
-                    <div class="relative" style="width: 41px; height: 41px;">
-                        <div class="w-10 h-10 bg-yellow-400 rounded-full" />
-                        <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
-                    </div>
-                    <div class="relative" style="width: 41px; height: 41px;">
-                        <div class="w-10 h-10 bg-yellow-400 rounded-full" />
-                        <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
-                    </div>
-                    <div class="relative" style="width: 41px; height: 41px;">
-                        <div class="w-10 h-10 bg-yellow-400 rounded-full" />
-                        <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
-                    </div>
-                    <div class="relative" style="width: 41px; height: 41px;">
-                        <div class="w-10 h-10 bg-yellow-400 rounded-full" />
-                        <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
-                    </div>
+                <div class="relative" style="width: 41px; height: 41px;">
+                    <div class="w-10 h-10 bg-yellow-400 rounded-full" />
+                    <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
+                </div>
+                <div class="relative" style="width: 41px; height: 41px;">
+                    <div class="w-10 h-10 bg-yellow-400 rounded-full" />
+                    <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
+                </div>
+                <div class="relative" style="width: 41px; height: 41px;">
+                    <div class="w-10 h-10 bg-yellow-400 rounded-full" />
+                    <p class="absolute right-0 bottom-0 text-xl text-center text-gray-900"></p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.1/dist/locomotive-scroll.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script src="./index.js" type="text/javascript"></script>
-        <script></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.1/dist/locomotive-scroll.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="./index.js" type="text/javascript"></script>
+
 </body>
 
 </html>
