fix files import

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <section class="w-screen h-screen z-0 relative top-0 left-0" id="home" data-scroll-section>
         <div class="flex flex-col my-auto">
-            <img class="object-fill h-48 w-48 inline-block relative top-12 ml-20" src="./img/avatar1.png" alt="" srcset="" data-scroll data-scroll-speed="1" />
+            <img class="object-fill h-48 w-48 inline-block relative top-12 ml-20" src="./public/img/avatar1.png" alt="" srcset="" data-scroll data-scroll-speed="1" />
             <div class="flex-1 text-left mt-5 pt-5 ml-20 inline" data-scroll data-scroll-speed="2">
                 <p class="text-white text-left font-playfair text-4xl leading-loose menu">
                     <span class="text-6xl font-bold font-playfair" data-splitting> Hi, I'm</span>
@@ -71,7 +71,7 @@
     </section>
     <section class="bg-gray-800 w-screen h-screen mx-auto" id="services" data-scroll-section>
         <div class="flex flex-row">
-            <img src="./img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="3" />
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="3" />
             <div class="flex-auto" data-scroll data-scroll-id="epa">
                 <span class="font-tinos font-bold  text-2xl text-blue-500" data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Dolorem sapiente, perspiciatis exercitationem
@@ -80,7 +80,7 @@
                     ratione, facere culpa, consequuntur impedit
                     fugiat!</span>
             </div>
-            <img src="./img/avatar1.png" height="200" width="200" data-scroll />
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll />
         </div>
     </section>
     <section class="bg-gray-900 w-screen h-screen mx-auto" id="portfolio" data-scroll-section></section>
