--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Jeydi 243</title>
 </head>
 
-<body class="h-full w-full" data-scroll-container>
+<body data-scroll-container>
     <!-- <div id="loading" class="loading">
         <img id="loading-image" src="img/principale.gif" alt="Loading..." />
     </div> -->
@@ -32,7 +32,7 @@
     </nav>
     <section class="w-screen h-screen z-0 relative top-0 left-0" id="home" data-scroll-section>
         <div class="flex flex-col my-auto">
-            <img class="object-fill h-48 w-48 inline-block relative top-12 ml-20" src="./public/img/avatar1.png" alt="" srcset="" data-scroll data-scroll-speed="1" />
+            <img class="object-fill h-48 w-48 inline-block relative top-12 ml-20" src="./public/img/avatar1.png" alt="Avatar epa"  data-scroll data-scroll-speed="2" />
             <div class="flex-1 text-left mt-5 pt-5 ml-20 inline" data-scroll data-scroll-speed="2">
                 <p class="text-white text-left font-playfair text-4xl leading-loose menu">
                     <span class="text-6xl font-bold font-playfair" data-splitting> Hi, I'm</span>
@@ -71,7 +71,7 @@
     </section>
     <section class="bg-gray-800 w-screen h-screen mx-auto" id="services" data-scroll-section>
         <div class="flex flex-row">
-            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="3" />
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="2" />
             <div class="flex-auto" data-scroll data-scroll-id="epa">
                 <span class="font-tinos font-bold  text-2xl text-blue-500" data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Dolorem sapiente, perspiciatis exercitationem
@@ -83,12 +83,62 @@
             <img src="./public/img/avatar1.png" height="200" width="200" data-scroll />
         </div>
     </section>
-    <section class="bg-gray-900 w-screen h-screen mx-auto" id="portfolio" data-scroll-section></section>
-    <section class="bg-gray-800 w-screen h-screen details mx-auto" id="services" data-scroll-section>
-        <p class="text md:space-y-0">Taitō</p>
+    <section class="bg-gray-900 w-screen h-screen mx-auto" id="portfolio" data-scroll-section>
+        <div class="flex flex-row">
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="2" />
+            <div class="flex-auto" data-scroll data-scroll-id="epa">
+                <span class="font-tinos font-bold  text-2xl text-blue-500" data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Dolorem sapiente, perspiciatis exercitationem
+                    sequi aperiam perferendis voluptates nisi. Ducimus,
+                    temporibus consectetur corrupti quisquam vel voluptate
+                    ratione, facere culpa, consequuntur impedit
+                    fugiat!</span>
+            </div>
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll />
+        </div>
     </section>
-    <section class="bg-gray-900 w-screen h-screen mx-auto" id="testimonials" data-scroll-section></section>
-    <section class="bg-gray-800 w-screen h-screen mx-auto" id="contact" data-scroll-section> </section>
+    <section class="bg-gray-800 w-screen h-screen details mx-auto" id="services" data-scroll-section>
+        <div class="flex flex-row">
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="2" />
+            <div class="flex-auto" data-scroll data-scroll-id="epa">
+                <span class="font-tinos font-bold  text-2xl text-blue-500" data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Dolorem sapiente, perspiciatis exercitationem
+                    sequi aperiam perferendis voluptates nisi. Ducimus,
+                    temporibus consectetur corrupti quisquam vel voluptate
+                    ratione, facere culpa, consequuntur impedit
+                    fugiat!</span>
+            </div>
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll data-scroll-speed="2" />
+        </div>
+    </section>
+    <section class="bg-gray-900 w-screen h-screen mx-auto" id="testimonials" data-scroll-section>
+        <div class="flex flex-row">
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="2" />
+            <div class="flex-auto" data-scroll data-scroll-id="epa">
+                <span class="font-tinos font-bold  text-2xl text-blue-500" data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Dolorem sapiente, perspiciatis exercitationem
+                    sequi aperiam perferendis voluptates nisi. Ducimus,
+                    temporibus consectetur corrupti quisquam vel voluptate
+                    ratione, facere culpa, consequuntur impedit
+                    fugiat!</span>
+            </div>
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll data-scroll-speed="2" />
+        </div>
+    </section>
+    <section class="bg-gray-800 w-screen h-screen mx-auto" id="contact" data-scroll-section>
+        <div class="flex flex-row">
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll class="fancy" data-scroll-speed="2" />
+            <div class="flex-auto" data-scroll data-scroll-id="epa">
+                <span class="font-tinos font-bold  text-2xl text-blue-500" data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Dolorem sapiente, perspiciatis exercitationem
+                    sequi aperiam perferendis voluptates nisi. Ducimus,
+                    temporibus consectetur corrupti quisquam vel voluptate
+                    ratione, facere culpa, consequuntur impedit
+                    fugiat!</span>
+            </div>
+            <img src="./public/img/avatar1.png" height="200" width="200" data-scroll data-scroll-speed="2" />
+        </div>
+    </section>
     <svg class="cursor" width="30" height="30" viewBox="0 0 30 30">
         <circle class="cursor__inner" cx="15" cy="15" r="7.5" />
     </svg>
