--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <img class="ml-20 object-fill w-48 inline-block relative top-12" src="./public/img/avatar1.png" alt="Avatar epa" data-scroll data-scroll-repeat="true" data-scroll-speed="2" data-scroll-id="avatarId" />
                     <div class="ml-20 text-left text-black mt-5 pt-5 inline" data-scroll data-scroll-repeat="true" data-scroll-speed="2" data-scroll-id="textInHome">
                         <p class="text-white text-left font-k2d text-4xl leading-loose italic" data-splitting>
-                            <span class="text-6xl font-bold font-k2d">Hi, I'm </span>
-                            <span class="font-k2d text-6xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-teal-300">Epa</span>,</br>
+                            <span class="text-8xl font-bold font-k2d">Hi, I'm </span>
+                            <span class="font-k2d text-8xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-teal-300">Epa</span>,</br>
                             <span class="font-k2d text-4xl">A Lubumbashi based </span>
                             <span class="font-k2d text-4xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-teal-500">
                                 Mobile
@@ -63,13 +63,22 @@
                     </button>
                 </div>
                 <div class="flex flex-col w-1/3 h-screen justify-center place-items-center" id="target_epa">
-                    <img src="public/img/epa/2.jpg" id="epaImage" class="object object-cover rounded-lg w-3/5 h-2/3 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 skew-x-1" data-scroll>
+                    <img src="public/img/epa/2.jpg" id="epaImage" class="object object-cover rounded-lg w-3/5 h-2/3" data-scroll>
                 </div>
             </div>
         </section>
         <section class="section2" id="about" data-scroll-section>
             <span data-scroll-call="about" data-scroll></span>
             <p class="font-k2d text-blue-500 text-8xl text-center" data-splitting data-scroll data-scroll-repeat="true" data-scroll-delay="2" data-scroll-repeat="true">About</p>
+            <div id="fofo">
+                <form action="">
+                    <img src="https://bit.ly/2tlJLoz"><br>
+                    <input type="text" value="@AmJustSam"><br>
+                    <input type="password"><br>
+                    <input type="submit" value="SIGN IN"><br>
+                    <span><a href="#">Forgot Password?</a></span>
+                </form>
+            </div>
         </section>
         <section class="section1" id="portfolio" data-scroll-section>
             <span data-scroll-call="portfolio" data-scroll></span>
