migrate tot tsc

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         <p class="text-white text-left font-k2d text-4xl leading-loose italic" data-splitting>
                             <span class="text-8xl font-bold font-k2d">Hi, I'm </span>
                             <span class="font-k2d text-8xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-teal-300">Epa</span>,</br>
-                            <span class="font-k2d text-4xl">A Lubumbashi based </span>
-                            <span class="font-k2d text-4xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-teal-500">
+                            <span class="font-k2d text-2xl">A Lubumbashi based </span>
+                            <span class="font-k2d text-2xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-teal-500">
                                 Mobile
                             </span>,
                             <span href="#mobile" data-img="img/epa/3.jpg" class="font-k2d text-4xl text-transparent bg-gradient-to-r bg-clip-text from-blue-500 via-red-500 to-fuchsia-500">
@@ -63,7 +63,9 @@
                     </button>
                 </div>
                 <div class="flex flex-col w-1/3 h-screen justify-center place-items-center" id="target_epa">
-                    <img src="public/img/epa/2.jpg" id="epaImage" class="object object-cover rounded-lg w-3/5 h-2/3" data-scroll>
+                    <div class="img-wrapper-epa align-self-center">
+                        <img id="epaImage" src="public/img/epa/2.jpg"  class="object object-cover rounded-lg w-3/5 h-2/3" data-scroll>
+                    </div>
                 </div>
             </div>
         </section>
